default-network-policy.yaml
# Defalut network-policy 
apiVersion: netwoeking.k8s.io.v1 
kind: NetworkPolicy 
metadata:
  name : deny-network-policy 
  namespace : default 
spec: 
  podSelector: {}
  policyTypes: 
    - Ingress 
    - Egress
