egress-deny-policy.yaml
apiVersion: networking.k8s.io.v1 
kind: NetworkPolicy
metadata: 
  name: deny-egress-policy 
  namespace: default 
spec: 
  podSelector: {} 
  policyType: 
    - Egress # it means all traffice from ingress in default namesapce are deny
