multi-pod-selector.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name : muttiple-pod-policy 
  namespace: default 
spec: 
  podSelector: 
    matchLables: 
      app: frontend 
  policyType: 
    - Egress
  egress: 
   - to: 
     - namespaceSelector: 
       matchExpression: 
         app: web
       operater: In 
       values: ["backend", "db"]    # in place of one selector we can used multiple pod also in that way
