network-policy-specific-port.yaml
apiVersion: networking.k8s.io.v1 
kind: NetworkPolicy 
metadata: 
  name: port-network-policy 
  namespace: default 
spec: 
  podSelector: 
    matchLabels: 
      app: web 
  policyType: 
    - Ingress
    - Egress 
  ingress: 
    - from:
      - podSelector:
        matchLabels: 
          app: db 
        ports: 
          - port: 3306 
            protocal: TCP
